// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationsTable /> spec renders the component 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding: 0px 0px;"
  >
    <div
      class="euiFlexItem"
    >
      <h3
        class="euiTitle euiTitle--medium"
      >
        Notification history
      </h3>
    </div>
  </div>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
  />
  <div
    style="padding: initial;"
  >
    <div
      class="euiBasicTable"
    >
      <div>
        <div
          class="euiTableHeaderMobile"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiTableSortMobile"
              >
                <div
                  class="euiPopover euiPopover--anchorDownRight"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                        <span
                          class="euiButtonEmpty__text"
                        >
                          Sorting
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <table
          class="euiTable euiTable--responsive euiTable--auto"
          id="random_html_id"
          tabindex="-1"
        >
          <caption
            class="euiScreenReaderOnly euiTableCaption"
          />
          <thead>
            <tr>
              <th
                aria-live="polite"
                aria-sort="none"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_event_source.title_0"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Notification"
                    >
                      Notification
                    </span>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in ascending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                aria-live="polite"
                aria-sort="none"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_event_source.feature_1"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Source type"
                    >
                      Source type
                    </span>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in ascending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                aria-live="polite"
                aria-sort="none"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_event_source.severity_2"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Severity"
                    >
                      Severity
                    </span>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in ascending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                aria-live="polite"
                aria-sort="ascending"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_last_updated_time_ms_3"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Time sent; Sorted in ascending order"
                    >
                      Time sent
                    </span>
                    <svg
                      aria-hidden="true"
                      aria-label="Sorted in ascending order"
                      class="euiIcon euiIcon--medium euiIcon-isLoading euiTableSortIcon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in descending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_success_4"
                role="columnheader"
                scope="col"
              >
                <div
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Sent status"
                  >
                    Sent status
                  </span>
                </div>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_status_list_5"
                role="columnheader"
                scope="col"
              >
                <div
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Channels"
                  >
                    Channels
                  </span>
                </div>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_status_list_6"
                role="columnheader"
                scope="col"
              >
                <div
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Channel types"
                  >
                    Channel types
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="euiTableRow"
            >
              <td
                class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                colspan="7"
              >
                <div
                  class="euiTableCellContent euiTableCellContent--alignCenter"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    No items found
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationsTable /> spec renders the component with items 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding: 0px 0px;"
  >
    <div
      class="euiFlexItem"
    >
      <h3
        class="euiTitle euiTitle--medium"
      >
        Notification history
      </h3>
    </div>
  </div>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
  />
  <div
    style="padding: initial;"
  >
    <div
      class="euiBasicTable"
    >
      <div>
        <div
          class="euiTableHeaderMobile"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiTableSortMobile"
              >
                <div
                  class="euiPopover euiPopover--anchorDownRight"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButtonEmpty__text"
                        >
                          Sorting
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <table
          class="euiTable euiTable--responsive euiTable--auto"
          id="random_html_id"
          tabindex="-1"
        >
          <caption
            class="euiScreenReaderOnly euiTableCaption"
          />
          <thead>
            <tr>
              <th
                aria-live="polite"
                aria-sort="none"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_event_source.title_0"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Notification"
                    >
                      Notification
                    </span>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in ascending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                aria-live="polite"
                aria-sort="none"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_event_source.feature_1"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Source type"
                    >
                      Source type
                    </span>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in ascending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                aria-live="polite"
                aria-sort="none"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_event_source.severity_2"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Severity"
                    >
                      Severity
                    </span>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in ascending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                aria-live="polite"
                aria-sort="ascending"
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_last_updated_time_ms_3"
                role="columnheader"
                scope="col"
              >
                <button
                  class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <span
                    class="euiTableCellContent"
                  >
                    <span
                      class="euiTableCellContent__text"
                      title="Time sent; Sorted in ascending order"
                    >
                      Time sent
                    </span>
                    <svg
                      aria-label="Sorted in ascending order"
                      class="euiIcon euiIcon--medium euiTableSortIcon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 4.207v8.237c0 .307-.224.556-.5.556s-.5-.249-.5-.556V4.207L2.904 8.303a.5.5 0 01-.707-.707l4.242-4.242a1.5 1.5 0 012.122 0l4.242 4.242a.5.5 0 11-.707.707L8 4.207z"
                      />
                    </svg>
                    <span
                      class="euiScreenReaderOnly"
                    >
                      Click to sort in descending order
                    </span>
                  </span>
                </button>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_success_4"
                role="columnheader"
                scope="col"
              >
                <div
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Sent status"
                  >
                    Sent status
                  </span>
                </div>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_status_list_5"
                role="columnheader"
                scope="col"
              >
                <div
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Channels"
                  >
                    Channels
                  </span>
                </div>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_status_list_6"
                role="columnheader"
                scope="col"
              >
                <div
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Channel types"
                  >
                    Channel types
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="euiTableRow euiTableRow-isSelectable"
            >
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Notification
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                >
                  <button
                    class="euiLink euiLink--primary"
                    type="button"
                  >
                    test notification
                  </button>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Source type
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                >
                  Reporting
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Severity
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  Info
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Time sent
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  06/07/21 4:53 pm GMT
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Sent status
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  <div
                    class="euiHealth"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--danger euiIcon-isLoading"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <button
                          class="euiLink euiLink--primary"
                          type="button"
                        >
                          Error
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Channels
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                >
                  2 channels
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Channel types
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  Slack, Email
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiPopover euiPopover--anchorUpRight euiPopover--withTitle"
            >
              <div
                class="euiPopover__anchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                  data-test-subj="tablePaginationPopoverButton"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                        fill-rule="non-zero"
                      />
                    </svg>
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Rows per page
                      : 
                      5
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <nav
              class="euiPagination"
            >
              <button
                aria-label="Previous page"
                class="euiButtonIcon euiButtonIcon--text"
                data-test-subj="pagination-button-previous"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
              <ul
                class="euiPagination__list"
              >
                <li
                  class="euiPagination__item"
                >
                  <button
                    aria-controls="random_html_id"
                    aria-current="true"
                    aria-label="Page 1 of 4"
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                    data-test-subj="pagination-button-0"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        1
                      </span>
                    </span>
                  </button>
                </li>
                <li
                  class="euiPagination__item"
                >
                  <a
                    aria-controls="random_html_id"
                    aria-label="Page 2 of 4"
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
                    data-test-subj="pagination-button-1"
                    href="#random_html_id"
                    rel="noreferrer"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        2
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="euiPagination__item"
                >
                  <a
                    aria-controls="random_html_id"
                    aria-label="Page 3 of 4"
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
                    data-test-subj="pagination-button-2"
                    href="#random_html_id"
                    rel="noreferrer"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        3
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="euiPagination__item"
                >
                  <a
                    aria-controls="random_html_id"
                    aria-label="Page 4 of 4"
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
                    data-test-subj="pagination-button-3"
                    href="#random_html_id"
                    rel="noreferrer"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        4
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
              <a
                aria-controls="random_html_id"
                aria-label="Next page, 2"
                class="euiButtonIcon euiButtonIcon--text"
                data-test-subj="pagination-button-next"
                href="#random_html_id"
                rel="noreferrer"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </a>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
